# DigestTool

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
src/: cli_arg_accepter.rs  context_menu.rs  hash.rs  main.rs
